Fixed some layout bugs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -179,6 +179,7 @@ body {
     &__info {
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 34px;
     }
 
